--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   position: relative;
 }
 
-#register-form {
+.popup {
   border-radius: 15px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
   text-align: center;
@@ -36,7 +36,7 @@ body {
   padding: 30px;
 }
 
-#register-form label {
+.title {
   color: #00b496;
   font-family: 'Luckiest Guy', cursive;
   font-size: 60px;
@@ -45,16 +45,7 @@ body {
   margin-bottom: 50px;
 }
 
-#register-form input {
-  /* border: 1px solid lightgray; */
-  border-radius: 5px;
-  font-family: Ubuntu, sans-serif;
-  font-size: 25px;
-  padding: 10px;
-  margin-bottom: 150px;
-}
-
-#register-form button[type="submit"] {
+.button {
   border: none;
   border-radius: 10px;
   background: #00b496;
@@ -66,12 +57,71 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
-#register-form button[type="submit"]:hover {
+.button:hover {
   box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
   transform: translateY(-3px) scale(1.02);
 }
 
-#register-form button[type="submit"]:active {
+.button:active {
   box-shadow: 0 5px 5px rgba(0, 0, 0, .3);
   transform: translateY(-1px) scale(1);
+}
+
+.input {
+  border-radius: 5px;
+  font-family: Ubuntu, sans-serif;
+  font-size: 25px;
+  padding: 10px;
+  margin-bottom: 150px;
+}
+
+#register-form {
+  
+}
+
+#register-form label {
+  
+}
+
+#register-form input {
+  
+}
+
+#register-form button[type="submit"] {
+}
+
+#available-user {
+  justify-content: start;
+  padding: 50px;
+  width: 800px;
+}
+
+.user-list {
+  padding: 20px 30px;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.user-list-row {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin-bottom: 40px;
+  width: 100%;
+}
+
+.user-list-row-left {
+  font-size: 35px;
+  font-family: Ubuntu, sans-serif;
+  font-weight: bold;
+  text-align: left;
+  width: 70%;
+}
+
+.user-list-row-right {
+  width: 30%;
+}
+
+.user-list-row-right button {
+  font-size: 20px;
 }
