--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,65 @@ body {
   font-size: 20px;
 }
 
+
+
+
+/* --------------------------------------------------------------------- */
+/* IN GAME CLASSES */
+/* --------------------------------------------------------------------- */
+#in-game {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  padding: 50px 0;
+}
+
+/* <div id="board-player" class="board">
+  <div class="board-info">
+    <div class="board-info-name">Player 1</div>
+    <div class="board-info-lives">Lives: 3</div> */
+
+.board {
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 50%;
+}
+
+.board-info {
+  text-align: center;
+}
+
+.board-info-name {
+  color: #00b496;
+  font-size: 30px;
+  font-family: 'Fredoka One', cursive;
+  margin-bottom: 10px;
+}
+
+.board-info-lives {
+  color: #131313;
+  font-size: 20px;
+  font-family: 'Fredoka One', cursive;
+  margin-bottom: 15px;
+}
+
+.board-canvas {
+  border: 1px solid green;
+}
+
+
+
+
+
+
+
+/* --------------------------------------------------------------------- */
 /* UTILITY CLASSES */
+/* --------------------------------------------------------------------- */
 .m-l-sm {
   margin-left: 10px;
 }
@@ -154,4 +212,8 @@ body {
 
 .hidden {
   display: none;
+}
+
+.highlight-red {
+  color: #cf0c0c;
 }
