Handle overlapping and plane outside the board.

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body {
   margin-bottom: 10px;
 }
 
-.board-info-lives {
+.board-info-notify {
   color: #131313;
   font-size: 20px;
   font-family: 'Fredoka One', cursive;
