--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,6 @@ body {
 .message {
   font-size: 35px;
   font-family: 'Fredoka One', cursive;
-  margin-bottom: 50px;
 }
 
 #available-users {
@@ -201,6 +200,9 @@ body {
 }
 .m-r-md {
   margin-right: 20px;
+}
+.m-b-xl {
+  margin-bottom: 50px;
 }
 
 .hidden {
